/*
 * host_path API result
 */
syntax = "proto3";

import "forch/proto/path_node.proto";

/*
 * Host path
 */
message HostPath {
    // IP addresses of source host
    repeated string src_ips = 1;

    // IP addresses of destination host
    repeated string dst_ips = 2;

    // Path consists of a list of switches with in and out ports
    repeated PathNode path= 3;

    // link to system overview API
    string system_state_url = 4;
}
